# Pugliese_cpg_2025

./: .gitignore  README.md  convert.py  environment.yaml  hydra_base.yaml  optimize_batch_size.py  pyproject.toml  setup.py  slurm_run.py  test_configs.py
coactivation/notebooks/: synchronicity-metric.ipynb
configs/: 20250624_mancBDN2activation.yaml  config.yaml
configs/20250624_mancBDN2activation.yaml/: 20250624_mancBDN2activation.yaml
configs/experiment/: DN_Screen.yaml  DN_Screen_FANC.yaml  DN_Screen_Test.yaml  DNb08_Stim.yaml  DNb08_Stim_FANC.yaml  (+19 more)
configs_old/: 20250306_mancBDN2LpruningINs_0.yaml  default-manc-pulse.yaml
dt-analysis/: explore-noise-scaling.ipynb
notebooks/: BDN2_Screen_Run.ipynb  Basic_Usage.ipynb  Figure 1.ipynb  Figure 2.ipynb  Figure 3.ipynb  Figure 4.ipynb  MANC - run a simulation.ipynb  MANC - run simulations from config.ipynb  MANC neural activity model.ipynb  Quick look at results.ipynb  Run simple simulations in a notebook.ipynb  Screen run.ipynb  Supplementary Figure 1.ipynb  Supplementary Figure 3a.ipynb  Supplementary Figure 5.ipynb  Supplementary Figure 6.ipynb  Supplementary Figure x FANC.ipynb  add class to FANC.ipynb  analyze_screen.ipynb  run_config.ipynb  test_config.ipynb  visualize_rates.ipynb
src/: __init__.py  adaptive_memory.py  async_vnc_sim.py  checkpointing.py  data_classes.py  io_dict_to_hdf5.py  optimized_vnc.py  optimized_vnc2.py  path_utils.py  plot_utils.py  prune_net.py  run_BDN2.py  run_hydra.py  run_pruning_from_start_jax.py  shuffle_utils.py  sim_utils.py  sim_utils_Jax.py  vnc.py  vncNet.py  vncNetJax.py  vncNetShuffle.py  vncNetTest.py  vnc_sim.py
(+128 files in other folders)
